--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: black;
     margin:0;
@@ -23,6 +22,7 @@ header{
     font-size:12px;
     font-weight: bold;
     text-decoration: none;
+    padding-bottom: 3px;
     border-bottom: transparent 3px solid;
     border-top: transparent 3px solid;
     color: rgba(255,255,255,0.7);
@@ -41,11 +41,14 @@ header{
 .topBar{
     padding: 20px 16px;
 }
+.topNavBar {
+    padding-top:9px;
+}
 .logo{
     font-family:"Arial Black";
     font-size:24px;
     display: block;
-
+    line-height: 50px;
 }
 .topBar::after{
     content:'';
