--- a/image/Yufei Rusume_files/index.css
+++ b/image/Yufei Rusume_files/index.css
@@ -91,30 +91,17 @@ main {
 
 }
 .topBar {
-    padding: 10px 20px;
+    padding: 20px 16px;
     display: flex;
     justify-content: space-between;
-    align-content: center;
-    transition: all 0.5s;
-    z-index: 5;
 }
-.barActive{
-    background-color: rgba(165, 195, 204, 0.9);
-    padding: 0px 20px;
-}
-.topNavBar{
-    display: flex;
-    align-items:  center;
-}
+
 .topNavBar > ul {
     display: flex;
     justify-content: space-around;
-    list-style: none;
-    padding-top: 5px;
-    align-items: center;
 }
 .topNavBar > ul > li{
-    padding: 0 10px;
+    padding: 0px,10px;
 }
 .topNavBar > ul > li > a {
     font-size: 12px;
@@ -130,6 +117,17 @@ main {
 .topNavBar > ul > li > a:hover {
     border-bottom-color: lightblue;
     border-radius: 1px;
+}
+
+.topNavBar > ul {
+    list-style: none;
+    padding-inline-start: 0px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.topNavBar {
+    padding-top: 9px;
 }
 
 .logo {
