new profilo section animation

--- a/css/slide.css
+++ b/css/slide.css
@@ -48,13 +48,17 @@
 }
 .slideFooter>.preButton{
     order: 0;
+    background-color: rgba(0,0,0,0.4);
+
     cursor: pointer;
-    margin: 5px 10px;
+    padding: 1em 2em;
+
 }
 .slideFooter>.nextButton{
     order: 2;
+    background-color: rgba(0,0,0,0.4);
     cursor: pointer;
-    margin: 5px 10px;
+    padding: 1em 2em;
 }
 .slideFooter>.dots>span{
     display: inline-block;
