--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
 }
 
 main {
@@ -29,7 +30,7 @@ main {
     box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 1);
 }
 section{
-    z-index: -1;
+    z-index: 0;
 }
 .fixedWindow {
     max-width: 0px;
@@ -44,6 +45,15 @@ section{
     max-width: 930px;
     overflow: hidden;
     visibility: visible;
+}
+.Project.fixedWindow{
+    max-width: 930px;
+    overflow: hidden;
+    visibility: visible;
+    transform: translateY(300px);
+}
+.Project.fixedWindow.windowActive{
+    transform: translateY(0);
 }
 
 .clearfix::after {
