add message board

--- a/css/index.css
+++ b/css/index.css
@@ -29,9 +29,11 @@ main {
     margin-top: -300px;
     box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 1);
 }
-section{
+
+section {
     z-index: 0;
 }
+
 .fixedWindow {
     max-width: 0px;
     margin-left: auto;
@@ -46,13 +48,15 @@ section{
     overflow: hidden;
     visibility: visible;
 }
-.Project.fixedWindow{
+
+.SlideIn.fixedWindow {
     max-width: 930px;
     overflow: hidden;
     visibility: visible;
     transform: translateY(300px);
 }
-.Project.fixedWindow.windowActive{
+
+.SlideIn.fixedWindow.windowActive {
     transform: translateY(0);
 }
 
@@ -325,10 +329,12 @@ li > .aBorderClick {
 footer {
     background-color: lightblue;
 }
-#footerLink{
+
+#footerLink {
     visibility: hidden;
 }
-#footerLink.elementActivation{
+
+#footerLink.elementActivation {
     visibility: visible;
 }
 
@@ -363,21 +369,23 @@ footer .icon:hover {
 .download-resume {
     text-align: center;
 }
-.download-resume.fixedWindow{
-    max-width: 930px ;
+
+.download-resume.fixedWindow {
+    max-width: 930px;
     visibility: visible;
     position: relative;
-    top:300px;
+    top: 300px;
     transition: top 3s;
 }
 
-.download-resume.fixedWindow.windowActive{
-    top:20px;
+.download-resume.fixedWindow.windowActive {
+    top: 20px;
 }
 
-.download-button{
+.download-button {
     margin-top: 35px;
 }
+
 .download-button > a {
     z-index: 1;
     padding: 19px 55px;
@@ -399,6 +407,7 @@ footer .icon:hover {
     font-size: 16px;
     line-height: 26px;
 }
+
 .professionalSkill {
     margin-top: 40px;
     text-align: center;
@@ -541,4 +550,85 @@ footer .icon:hover {
     background-image: url("/image/p.jpg");
     height: 278px;
     width: 294px;
+}
+
+#messageSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.messageBoard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.messageBoard > h1 {
+    margin: 0.5em;
+}
+
+.messageDisplay {
+    height: 30vh;
+    width: 70%;
+    background-color: rgba(255, 255, 255, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.messageDisplay > li {
+    padding: 10px;
+    width: 90%;
+}
+
+.messageText {
+    display: inline-block;
+    padding: 0.2em;
+    border-bottom: solid 1px grey;
+    width: 100%;
+}
+
+.messageStatics {
+    font-size: 0.7em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+.messageStatics span {
+    color: rgba(255, 255, 255, 0.4);
+}
+
+.submitMessage {
+    margin: 10px;
+}
+
+.submitMessage span {
+    display: inline-block;
+    padding: 0 5px;
+    color: #9c9c9c;
+    font-style: italic;
+}
+
+#messageForm > button {
+    margin: 0 10px;
+    outline: none;
+    padding: 2px 10px;
+    background-color: rgba(255, 255, 255, 0.4);;
+    background-color: rgb(39, 41, 46);
+    border: 2px rgb(64, 71, 84) solid;
+    border-radius: 5px;
+    display: inline-block;
+    color: rgb(152, 152, 157);
+    transition: box-shadow 0.5s;
+}
+#messageForm>input{
+    border-radius: 3px;
+}
+
+#messageForm > button:hover {
+    box-shadow: 0px 0px 9px 3px rgba(255, 255, 255, 1);
 }
